Fixed a minor ui issue where the eye icon gets highlighted when you press it too much

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -14,6 +14,7 @@ footer{
     bottom: 0;
 
 }
+
 #subheader{
     border:0.07em solid black; 
     margin: auto;
@@ -48,4 +49,5 @@ footer{
 form i {
     margin-left: -1.5em;
     cursor: pointer;
+    user-select: none;
 }
